--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,8 @@
         <title>WASM</title>>
     </head>
     <body>
+        <canvas id="canvas" width="800" height="800"></canvas>
 
+        <script src="wasm-game.js"></script>
     </body>
 </html>
