--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF8">
-        <title>WASM</title>>
+        <title>WASM</title>
     </head>
     <body>
         <canvas id="canvas" width="800" height="800"></canvas>
