:cocktail: add some styles to index.html

--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,15 @@
     <head>
         <meta charset="UTF8">
         <title>WASM</title>
+        <style>
+            body {
+                background-color: #000;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <canvas id="canvas" width="800" height="800"></canvas>
+        <canvas id="canvas" width="400" height="400"></canvas>
 
         <script src="wasm-game.js"></script>
     </body>
